test/cli/test-validating-admission-policy/match-namespaces/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valid-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: invalid-namespace
